[gd_scene load_steps=2 format=3 uid="uid://dbx534lya5djq"]

[ext_resource type="Script" uid="uid://cxfio2ifrfpl0" path="res://scripts/Game.gd" id="1_mg8lk"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_mg8lk")

[node name="Grid" type="Node2D" parent="."]

[node name="Snakes" type="Node2D" parent="."]

[node name="Apples" type="Node2D" parent="."]

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOver" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/GameOver"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver/PanelContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOver/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over!
"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOver/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Restart"
